Update config.json pagination key for Hugo 0.140
Replace deprecated 'paginate' with 'pagination.pagerSize' to match Hugo 0.140 config schema.

Ultraworked with [Sisyphus](https://github.com/code-yeongyu/oh-my-opencode)

Co-authored-by: Sisyphus <clio-agent@sisyphuslabs.ai>

--- a/config.json
+++ b/config.json
@@ -80,7 +80,7 @@
 	"enableRobotsTXT": true,
 	"languageCode": "[LANGUAGE]",
 	"defaultContentLanguage": "[LANGUAGE]",
-	"paginate": 25,
+	"pagination": { "pagerSize": 25 },
 	"pluralizeListTitles": false,
 	"params": {
 		"description": "Follow <a href=\"https://micro.blog/[USERNAME]\">@[USERNAME] on Micro.blog</a>.",
