--- a/mise.toml
+++ b/mise.toml
@@ -1,13 +1,13 @@
 [tools]
-hugo = "0.140.0"
+hugo = "0.91.2"
 
 [tasks.serve]
 description = "Start Hugo dev server with live reload"
-run = "hugo server --noBuildLock -s dev-site"
+run = "hugo server -s dev-site"
 
 [tasks.build]
 description = "Build the site to dev-site/public/"
-run = "hugo --noBuildLock -s dev-site"
+run = "hugo -s dev-site"
 
 [tasks.clean]
 description = "Remove generated files"
